# tack-and-trim

./: .gitattributes  .gitignore  .parcelrc  CLAUDE.md  DEAD_CODE_REPORT.md  DEAD_CODE_SUMMARY.md  PHYSICS_IMPROVEMENTS.md  Readme.md  SAILING_GLOSSARY.md  baseline.json  baseline.rendering.json  brainstorm.md  package-lock.json  package.json  playwright.benchmark.config.ts  playwright.config.ts  tsconfig.check.json  tsconfig.json  typedoc.json
assets/: readme.md
docs/: GPU_HANG_FIX.md  boat-brands.md  boat-stability-design.md  boat-upgrade-brainstorm.md  editor-game-duplication-findings.md  (+26 more)
pipeline/: Cargo.toml  PROFILING.md  RUST_PIPELINE_PLAN.md  profile-samply-summary.py  profile-samply.sh
pipeline/.cargo/: config.toml
pipeline/build-level/: Cargo.toml
pipeline/build-level/src/: build_grid.rs  constrained_simplify.rs  download.rs  extract.rs  geo.rs  main.rs  marching.rs  marching_squares.rs  region.rs  segment_index.rs  simplify.rs  trees.rs  validate.rs
pipeline/mesh-builder/: Cargo.toml  README.md
pipeline/mesh-builder/src/: bounds.rs  config.rs  decimate.rs  lib.rs  physics.rs  ray_march.rs  refine.rs  tidemesh.rs  tidemesh_file.rs  triangulate.rs  wavefront.rs  wavemesh_file.rs  windmesh.rs  windmesh_file.rs
pipeline/mesh-builder/tests/: determinism.rs
pipeline/pipeline-core/: Cargo.toml
pipeline/pipeline-core/src/: polygon_math.rs  step.rs
pipeline/pipeline-core/src/level/: grid_builders.rs  mod.rs
pipeline/pipeline-core/src/terrain/: contour.rs  distance.rs  idw_grid.rs  lookup_grid.rs  query.rs  spatial.rs
pipeline/query-wasm/: Cargo.toml  build.rs
pipeline/query-wasm/src/: fast_trig.rs  lib.rs  noise.rs  packed.rs  protocol.rs  terrain.rs  terrain_height.rs  terrain_slow.rs  tide.rs  water.rs  wind.rs  world_state.rs
pipeline/terrain-core/: Cargo.toml  IDW_GRID_OPTIMIZATION.md
pipeline/terrain-core/src/: humanize.rs  level.rs  lib.rs  polygon_math.rs  step.rs  terrain.rs  trees.rs
pipeline/terrain-core/src/level/: binary.rs  build.rs  format.rs  parse.rs
pipeline/terrain-core/src/terrain/: mod.rs
pipeline/terrain-import/: Cargo.toml
pipeline/terrain-import/src/: build_grid.rs  download.rs  extract.rs  geo.rs  main.rs  marching.rs  region.rs  segment_index.rs  simplify.rs  validate.rs
pipeline/wavemesh-builder/: .gitignore  Cargo.toml  README.md  profile-dtrace-summary.py  profile-dtrace.sh  profile-samply-summary.py  profile-samply.sh  profile.py
pipeline/wavemesh-builder/src/: bounds.rs  config.rs  decimate.rs  humanize.rs  level.rs  lib.rs  main.rs  marching.rs  physics.rs  post.rs  ray_march.rs  refine.rs  terrain.rs  tidemesh.rs  tidemesh_file.rs  triangulate.rs  wavefront.rs  wavemesh_file.rs  windmesh.rs  windmesh_file.rs
pipeline/wavemesh-builder/tests/: determinism.rs
(+1251 files in other folders)
