[package]
name = "build-level"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gdal = { version = "0.19", features = ["bindgen"] }
glob = "0.3"
regex = "1"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pipeline-core = { path = "../pipeline-core" }
mesh-builder = { path = "../mesh-builder" }
