[package]
name = "mesh-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
pipeline-core = { path = "../pipeline-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
glob = "0.3"
num-format = "0.4"
spade = "2"
nalgebra = "0.33"
nalgebra-sparse = "0.10"

[dev-dependencies]
tempfile = "3"
