[package]
name = "terrain-import"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gdal = { version = "0.19", features = ["bindgen"] }
regex = "1"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terrain-core = { path = "../terrain-core" }
wavemesh-builder = { path = "../wavemesh-builder" }
