[package]
name = "wavemesh-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
terrain-core = { path = "../terrain-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
glob = "0.3"
num-format = "0.4"

[dev-dependencies]
tempfile = "3"
